--- a/static/css/introHCI.css
+++ b/static/css/introHCI.css
@@ -9,6 +9,14 @@
 	color: #CC00AA;
 }
 
+.project p{
+     font-variant: small-caps;
+}
+
+#project1{
+     font-variant: small-caps;
+}
+
 /* this style exists to make it obvious that you've successfully linked
    the CSS to the page. feel free to remove it once the link is working. */
 body {
